--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -85,13 +85,12 @@
         <activity android:name=".activity.SearchActivity" />
         <activity android:name=".activity.PlaceDetailActivity" />
         <activity android:name=".activity.BaseActivity" />
-        <activity android:name=".activity.SplashActivity" />
+        <activity android:name=".activity.SplashActivity"></activity>
+        <activity android:name=".activity.RegisterOwnerActivity"></activity>
 
         <uses-feature
             android:name="android.hardware.camera"
             android:required="true" />
-
-        <activity android:name=".activity.MapActivity"></activity>
     </application>
 
 </manifest>
