--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,5 +43,6 @@ dependencies {
     compile 'com.github.sharish:ShimmerRecyclerView:v1.0.1'
     compile 'com.facebook.shimmer:shimmer:0.1.0@aar'
     compile 'pl.droidsonroids.gif:android-gif-drawable:1.2.7'
+    compile 'com.github.andremion:counterfab:1.0.1'
     testCompile 'junit:junit:4.12'
 }
