--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -87,7 +87,12 @@
         <activity android:name=".activity.BaseActivity" />
         <activity android:name=".activity.SplashActivity"></activity>
         <activity android:name=".activity.RegisterOwnerActivity"></activity>
-
+        <activity android:name=".activity.PlacesOwnerActivity"></activity>
+        <activity android:name=".activity.AddplaceActivity"></activity>
+        <activity android:name=".activity.AdminActivity"></activity>
+        <activity android:name=".activity.ManagerActivity"></activity>
+        <activity android:name=".activity.ProductActivity"></activity>
+        <activity android:name=".activity.ProductCategories"></activity>
         <uses-feature
             android:name="android.hardware.camera"
             android:required="true" />
