--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,14 +35,14 @@ dependencies {
     compile 'de.hdodenhof:circleimageview:2.1.0'
     compile 'com.google.android.gms:play-services-maps:11.0.2'
     compile 'com.google.android.gms:play-services:11.0.2'
-    compile 'com.squareup.okhttp3:okhttp:3.2.0'
-    compile 'com.adeel:easyFTP:1.0'
-    compile 'id.zelory:compressor:2.1.0'
-    compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
+    compile 'com.squareup.okhttp3:okhttp:3.6.0'
     compile 'com.google.code.gson:gson:2.8.0'
+    compile 'com.jakewharton.picasso:picasso2-okhttp3-downloader:1.0.2'
     compile 'com.github.GrenderG:Toasty:1.2.5'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.github.sharish:ShimmerRecyclerView:v1.0.1'
+    compile 'com.facebook.shimmer:shimmer:0.1.0@aar'
     compile 'pl.droidsonroids.gif:android-gif-drawable:1.2.7'
+    compile 'com.github.andremion:counterfab:1.0.1'
     testCompile 'junit:junit:4.12'
 }
