--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,8 +2,8 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 25
-    buildToolsVersion '25.0.3'
-    defaultConfig  {
+    buildToolsVersion "25.0.2"
+    defaultConfig {
         applicationId "com.linhnv.foodsy"
         minSdkVersion 16
         targetSdkVersion 25
@@ -11,20 +11,6 @@ android {
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         resConfigs "vn", "us"
-        multiDexEnabled true
-    }
-    packagingOptions {
-        exclude 'META-INF/rxjava.properties'
-        exclude 'META-INF/DEPENDENCIES.txt'
-        exclude 'META-INF/LICENSE.txt'
-        exclude 'META-INF/NOTICE.txt'
-        exclude 'META-INF/NOTICE'
-        exclude 'META-INF/LICENSE'
-        exclude 'META-INF/DEPENDENCIES'
-        exclude 'META-INF/notice.txt'
-        exclude 'META-INF/license.txt'
-        exclude 'META-INF/dependencies.txt'
-        exclude 'META-INF/LGPL2.1'
     }
     buildTypes {
         release {
@@ -41,14 +27,14 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile 'com.android.support:appcompat-v7:25.3.1'
-    testCompile 'junit:junit:4.12'
-
     compile 'com.android.support:design:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.0-beta5'
     compile 'com.facebook.android:account-kit-sdk:4.+'
     compile 'com.facebook.android:facebook-android-sdk:[4,5)'
     compile 'com.android.support:recyclerview-v7:25.3.1'
     compile 'de.hdodenhof:circleimageview:2.1.0'
+    compile 'com.google.android.gms:play-services-maps:11.0.2'
+    compile 'com.google.android.gms:play-services:11.0.2'
     compile 'com.squareup.okhttp3:okhttp:3.2.0'
     compile 'com.adeel:easyFTP:1.0'
     compile 'id.zelory:compressor:2.1.0'
@@ -60,7 +46,5 @@ dependencies {
     compile 'pl.droidsonroids.gif:android-gif-drawable:1.2.7'
     compile('com.thomashaertel:multispinner:0.1.1@aar') {
     }
-    compile 'com.google.android.gms:play-services-location:11.0.0'
-    compile 'com.google.android.gms:play-services-maps:11.0.0'
-    compile 'com.android.support:multidex:1.0.1'
+    testCompile 'junit:junit:4.12'
 }
