--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -115,6 +115,16 @@
         <activity
             android:name=".activity.MapActivity"
             android:screenOrientation="portrait"/>
+        <activity
+            android:name=".activity.ViewPlacesOwner"
+            android:screenOrientation="portrait"/>
+        <activity
+            android:name=".activity.EditplaceActivity"
+            android:screenOrientation="portrait"/>
+        <activity
+            android:name=".activity.AddCategoryProduct"
+            android:screenOrientation="portrait"/>
+
     </application>
 
 </manifest>
